@@ -1,6 +1,8 @@
 ver 0.20.12 (not yet released)
 * input
   - curl: fix seeking
+* decoder
+  - vorbis: fix Tremor support
 * player
   - log message when decoder is too slow
 
